SOL-1350: Fixes line-wrapping in image gallery titles.

--- a/scss/modules/_image-gallery.scss
+++ b/scss/modules/_image-gallery.scss
@@ -68,6 +68,7 @@ $ig-blue: #e20613;
         opacity: 0;
         display: inline-block;
         width: 100%;
+        white-space: normal;
 
         &.left,
         &.center,
